werkende navigationdrawer. Kan van het ene fragment naar het andere

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,9 @@ dependencies {
     //FIREBASE
     implementation platform('com.google.firebase:firebase-bom:30.0.0')
 
+    //recyclerview
+    implementation 'androidx.recyclerview:recyclerview:1.2.1'
+
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.1'
