--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,9 @@ buildscript {
 
         //Voor Firebase
         classpath 'com.google.gms:google-services:4.3.10'
+
+        //Voor navigation
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.4.2"
     }
 }
 
